# dev-tracker-scrapers

./: .gitattributes  .gitignore  README.md  pyproject.toml  scrapy.cfg
.github/workflows/: ci.yml  scrape.yml
test/: __init__.py  test_api.py  test_board_zoning_appeals.py  test_bseed_permits.py  test_bseed_special.py  test_city_council.py  test_community_benefits.py  test_det_press_releases.py  test_historic_district_commission.py  test_medc_incentives.py  test_medc_programs.py  test_planning_commission.py  test_state_tax_exemptions.py  test_state_tax_nez.py  test_utils.py  utils.py
test/cassettes/: test.test_board_zoning_appeals.test_count.json  test.test_board_zoning_appeals.test_id.json  test.test_board_zoning_appeals.test_locations.json  test.test_bseed_permits.test_content.json  test.test_bseed_permits.test_count.json  test.test_bseed_special.test_content.json  test.test_bseed_special.test_count.json  test.test_bseed_special.test_id.json  test.test_bseed_special.test_locations.json  test.test_city_council.test_count.json  test.test_city_council.test_locations.json  test.test_community_benefits.test_count.json  test.test_community_benefits.test_id.json  test.test_community_benefits.test_locations.json  test.test_det_press_releases.test_count.json  test.test_det_press_releases.test_id.json  test.test_det_press_releases.test_locations.json  test.test_historic_district_commission.test_content.json  test.test_historic_district_commission.test_locations.json  test.test_medc_incentives.test_content.json  test.test_medc_incentives.test_count.json  test.test_medc_incentives.test_dt.json  test.test_medc_incentives.test_location.json  test.test_medc_programs.test_content.json  test.test_medc_programs.test_count.json  test.test_medc_programs.test_dt.json
tracker/: api.py  extensions.py  items.py  middlewares.py  pipelines.py  settings.py  utils.py
tracker/extensions/: __init__.py  sentry.py  supabase.py
tracker/settings/: base.py  prod.py
tracker/spiders/: board_zoning_appeals.py  brownfield.py  bseed_permits.py  bseed_special.py  (+9 more)
