[project]
name = "dev-tracker-scrapers"
version = "0.1.0"
description = ""
authors = [{name = "Outlier Media", email = "admin@outliermedia.org"}]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry]
packages = [{include = "tracker"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"
requests = "^2.31.0"
itemadapter = "^0.10.0"
scrapy-playwright = "^0.0.42"
sentry-sdk = "^2.19.2"
supabase = "^2.3.5"
shapely = "^2.0.3"
pdfminer-six = "^20240706"

[tool.poetry.group.dev.dependencies]
freezegun = "^1.4.0"
betamax = "^0.9.0"
pytest = "^8.0.0"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    ".venv",
    ".pytest_cache"
]
[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I"
]
[tool.ruff.format]
indent-style = "space"